# ansible-rulebook

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  TEST.md  commitlint.config.js  commitlint.config.mjs  minimal-decision-environment.yml  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.cve-fix/: examples.md
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-image.yml  ci.yml  container-image.yml  e2e-tests.yml  e2e-tests.yml.disabled  linters.yml  release.yml  scheduled.yml  sonar-scan.yml  test-report.yml  tests.yml
ansible_events/: __init__.py  __main__.py  ansible_events.py  app.py  builtin.py  cli.py  collection.py  condition_parser.py  condition_types.py  conf.py  durability.py  engine.py  exception.py  fact_types.py  hosts.py  inventory.py  json_generator.py  key.py  messages.py  rule_generator.py  rule_types.py  rules_parser.py  util.py  websocket.py
ansible_events/drools/: README.md  __init__.py  durable_rules_engine.py  engine.py  jpy_durable_rules_engine.py  rest_durable_rules_engine.py
ansible_events/durable/: durable_rules_engine.py  engine.py
ansible_events/event_filters/: dashes_to_underscores.py  lists_to_dicts.py
ansible_events/filters/: lookup.py
ansible_rulebook/: __init__.py  __main__.py  ansible_events.py  app.py  back_pressure.py  builtin.py  cli.py  collection.py  common.py  condition_parser.py  condition_types.py  conf.py  constants.py  durability.py  eda_times.py  engine.py  exception.py  inventory.py  job_template_runner.py  json_generator.py  key.py  messages.py  persistence.py  plugin_utils.py  rule_generator.py  rule_set_runner.py  rule_types.py  rules_parser.py  shared_job_monitor.py  source_loader.py  source_manager.py  terminal.py  token.py  util.py  validators.py  vault.py  websocket.py
ansible_rulebook/action/: control.py  debug.py  helper.py  kafka_notify.py  metadata.py  noop.py  pg_notify.py  plugin.py  post_event.py  print_event.py  retract_fact.py  run_base.py  run_job_template.py  run_module.py  run_playbook.py  run_template.py  run_workflow_template.py  runner.py  set_fact.py  shutdown.py
ansible_rulebook/event_filter/: dashes_to_underscores.py  event_splitter.py  insert_hosts_to_meta.py  json_filter.py  normalize_keys.py
ansible_rulebook/event_filters/: insert_meta_info.py
ansible_rulebook/event_source/: generic.py  pg_listener.py  range.py  webhook.py
ansible_rulebook/jinja/: __init__.py  filters.py
ansible_rulebook/schema/: ruleset_schema.json
demos/sensu-demo/: docker-compose.yml  instructions.md
demos/sensu-kafka/: docker-compose.yml  instructions.md  recover-fake-app.yml  rules.yml
demos/sensu-kafka-demo/: docker-compose.yml  instructions.md
docs/: Makefile  actions.rst  collections.rst  conditions.rst  conf.py  contributing.rst  decision_environment.rst  development_environment.rst  drools_seq.md  environments.rst  events_and_facts.rst  extra_vars.rst  filters.rst  getting_started.rst  host_limit.rst  index.rst  installation.rst  introduction.rst  jinja_filters.rst  make.bat  multi_events.rst  multi_sources.rst  plugin_lifecycle.rst  readme.md  requirements.txt  rulebooks.rst  rules.rst  runner.rst  sources.rst  template.py  usage.rst  variables.rst
performance_test/: 100M_event_rules.yml  100k_event_rules.yml  10M_event_rules.yml  10k_event_rules.yml  1M_event_rules.yml  1k_event_rules.yml  generate_inventory.py  hello_playbook1.yml  host_rules.yml  inventory1.yml  inventory10.yml  inventory100.yml  null_rules.yml  perf_test.py  rules.yml  run_perf.sh  test_1.sh  test_rules_multiple_hosts.yml
performance_test/sources/: range.py
schema/: ruleset_schema.json
tests/: __init__.py  conftest.py  generate_asts.py  hello_playbook.yml  hello_playbook1.yml  inventory1.yml  pass1.txt  rules.yml  rules_with_assignment.yml  rules_with_assignment2.yml  rules_with_multiple_conditions.yml  rules_with_multiple_conditions2.yml  rules_with_multiple_conditions3.yml  rules_with_time.yml  rules_with_timestamp.yml  rules_with_vars.yml  rules_without_assignment.yml  run_examples.sh  test_actions.py  test_ansible_events.py  test_app.py  test_assert_facts.yml  test_ast.py  test_black.py  test_collection.py  test_conditions.py  test_controller.py  test_engine.py  test_examples.py  test_facts_and_events.py  test_filters.yml  test_foo.py  test_host_rules.yml  test_kafka.yml  test_lookups.py  test_multiple_sources.yml  test_plugin_utils.py  test_processes.py  test_rules.py  test_rules.yml  (+18 more)
tests/actions/: uri.py
tests/asts/: 01_noop.yml  02_debug.yml  03_print_event.yml  04_set_fact.yml  05_post_event.yml  06_retract_fact.yml  07_and.yml  08_or.yml  09_gt.yml  10_lt.yml  11_le.yml  12_ge.yml  13_add.yml  14_sub.yml  15_multiple_events_all.yml  16_multiple_events_any.yml  17_multiple_sources_any.yml  18_multiple_sources_all.yml  19_is_defined.yml  20_is_not_defined.yml  21_run_playbook.yml  23_nested_data.yml  24_max_attributes.yml  25_max_attributes_nested.yml  26_print_events.yml  27_var_root.yml  28_right_side_condition_template.yml  29_run_module.yml  30_run_module_missing.yml  31_run_module_missing_args.yml  32_run_module_fail.yml  33_run_playbook_retry.yml  34_run_playbook_retries.yml  35_multiple_rulesets_1_fired.yml  36_multiple_rulesets_both_fired.yml  (+21 more)
tools/: convert_to_ast.py
(+397 files in other folders)
