[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"


[tool.black]
line-length = 79
target-version = ["py39", "py310"]
extend-exclude = "docs"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79
extend_skip = ["docs"]
