[metadata]
name = ansible_rulebook
version = 1.0.2
description = Event driven automation for Ansible
url = https://github.com/ansible/ansible-rulebook
license = Apache-2.0
keywords = ansible_rulebook
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	aiohttp
	pyparsing >= 3.0
	jsonschema
	jinja2
	dpath >= 2.1.4
	janus
	ansible-runner
	websockets
	drools_jpy == 0.3.6

[options.packages.find]
include =
	ansible_rulebook
	ansible_rulebook.*

[options.entry_points]
console_scripts =
	ansible-rulebook = ansible_rulebook.cli:main

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:ansible_rulebook/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
extend-exclude = docs, venv, .venv
extend-ignore =
	E203,  #  Whitespace before ':' (false positive in slices, handled by black.
