[metadata]
name = ansible_rulebook
description = Event driven automation for Ansible
url = https://github.com/ansible/ansible-rulebook
license = Apache-2.0
keywords = ansible_rulebook
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	aiohttp >=3,<4
	pyparsing >= 3.0,<4
	jsonschema >=4,<5
	jinja2 >=3,<4
	dpath >= 2.1.4,<3
	janus >=1,<2
	ansible-runner >=2,<3
        websockets >=15,<15.1
	drools_jpy == 0.3.14
	watchdog >=3,<7
	xxhash >=3,<4
    pyyaml >=6,<7
    psycopg[binary] >=3,<4

[options.packages.find]
include =
	ansible_rulebook
	ansible_rulebook.*

[options.entry_points]
console_scripts =
	ansible-rulebook = ansible_rulebook.cli:main

[flake8]
extend-exclude = docs, venv, .venv
extend-ignore =
	E203,  #  Whitespace before ':' (false positive in slices, handled by black.

[options.extras_require]
production =
    psycopg[c] >=3,<4
development =
    psycopg[binary] >=3,<4
